Added missing error message.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -976,3 +976,5 @@ format.ddn=Data Dispatch Note
 format.dm=Data Module
 format.cgm=Computer Graphics Metafile
 format.js=JavaScript
+
+error.create.indexGroup.empty.name=An index group needs a name.
