Implemented copying of relations on version command (if relation type demands it)

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -812,6 +812,8 @@ message.export.xliff=Export as XLIFF
 
 relationType.cloneOnLeftCopy=Copy relation if left object is copied
 relationType.cloneOnRightCopy=Copy relation if right object is copied
+relationType.cloneOnLeftVersion=Copy relation if left object is versioned
+relationType.cloneOnRightVersion=Copy relation if right object is versioned
 user.not.found=The requested user account was not found in the database.
 error.xml.config=The config parameter has to be well-formed XML.
 
