--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -980,3 +980,4 @@ format.cgm=Computer Graphics Metafile
 format.js=JavaScript
 
 error.create.indexGroup.empty.name=An index group needs a name.
+error.password.too.short=Please enter a password with at least {0} characters.
