Fix login page: was missing logo after upgrade and CSS layout was broken.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -92,6 +92,7 @@ osd.getContent.link=download content
 error.no.content=Error: this object has no content.
 error.loading.folders=Error: could not load folders.. Please try to login again.<br>Original error message was:<br> {0}.
 app.illicium=Illicium
+app.cinnamon=Cinnamon
 
 relation.metadata=Metadata
 
@@ -980,3 +981,4 @@ format.js=JavaScript
 
 error.create.indexGroup.empty.name=An index group needs a name.
 error.password.too.short=Please enter a password with at least {0} characters.
+login=login
