--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -669,3 +669,4 @@ message.export.xliff=Exporter en tant que format XLIFF
 link.edit.folderType.title=Changer le type de dossier
 create.name=Nom
 metasetType.name.label=Nom
+app.cinnamon=Cinnamon
