--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -826,3 +826,4 @@ versionType.selected=Nur ausgewählte Objekte
 dialog.close=schließen
 relationType.info.head=Details: Verknüpfungstyp
 objectType.config=Konfiguration
+app.cinnamon=Cinnamon
