add changeTracking flag to Admin interface Fixes #87

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -152,7 +152,7 @@ error.create.folder=Failed to create the folder. Error message: {0}
 
 dummy.page=Ok, you have reached the dummy login page, which means your login was successful. Now someone should \
   create a more useful page and configure it in Config.groovy::  \
-  grails.plugins.springsecurity.successHandler.defaultTargetUrl='/login/dummyPage'
+  grails.plugin.springsecurity.successHandler.defaultTargetUrl='/login/dummyPage'
 
 errors.login.disabled = "Sorry, your account is disabled."
 errors.login.expired = "Sorry, your account has expired."
@@ -982,3 +982,5 @@ format.js=JavaScript
 error.create.indexGroup.empty.name=An index group needs a name.
 error.password.too.short=Please enter a password with at least {0} characters.
 login=login
+user.changeTracking=Change tracking
+user.changeTracking.help=If set to true, objects and folders will have the metadata of contentchanged flag set whenever the user causes changes to them. Should be true for normal users, false for system accounts.
