--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -342,7 +342,7 @@ data.save=speichern
 default.link.skip.label=Zum Inhalt springen
 dummy.page=Ok, Sie haben die Test-Post-Loginseite erreicht. Ihr Login war also erfolgreich. Nun sollte jemand \
  eine sinnvollere Seite erstellen und in der Config.groovy definieren: \
- grails.plugins.springsecurity.successHandler.defaultTargetUrl='/login/dummyPage'
+ grails.plugin.springsecurity.successHandler.defaultTargetUrl='/login/dummyPage'
 error.acquire.lock=Konnte das Objekt nicht sperren.
 error.class.not.found=Die angegebene Klasse wurde nicht gefunden. Bitte prüfen Sie den Namen und/oder \
  sprechen Sie mit ihrem Administrator (Hinweis\: es geht um ein classpath-Problem)
