Add image data for icons as image-data-urls in tags.
This reduces the number of connections in the browser and helps with broken asset management plugins.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -984,3 +984,4 @@ error.password.too.short=Please enter a password with at least {0} characters.
 login=login
 user.changeTracking=Change tracking
 user.changeTracking.help=If set to true, objects and folders will have the metadata of contentchanged flag set whenever the user causes changes to them. Should be true for normal users, false for system accounts.
+missing.alt.text=This image has no alt text, sorry.
