Do not show a Grails Runtime Exception on missing field value. Fix #116

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -985,3 +985,5 @@ login=login
 user.changeTracking=Change tracking
 user.changeTracking.help=If set to true, objects and folders will have the metadata of contentchanged flag set whenever the user causes changes to them. Should be true for normal users, false for system accounts.
 missing.alt.text=This image has no alt text, sorry.
+
+userAccount.fullname.nullable.error=Please enter the user's full name
