--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -827,3 +827,5 @@ dialog.close=schließen
 relationType.info.head=Details: Verknüpfungstyp
 objectType.config=Konfiguration
 app.cinnamon=Cinnamon
+
+userAccount.fullname.nullable.error=Bitte geben Sie den vollständigen Benutzernamen an.
