Add storeField to IndexItemController
Fix #3

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -987,3 +987,7 @@ user.changeTracking.help=If set to true, objects and folders will have the metad
 missing.alt.text=This image has no alt text, sorry.
 
 userAccount.fullname.nullable.error=Please enter the user's full name
+indexItem.storeField.label=Store field value in index
+indexItem.storeField.description=Store the field value in the index. \
+  This is useful for specialised code which uses just the index data from a found object without \
+  loading the whole document from the database.
