--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -514,7 +514,7 @@ indexItem.name.label=Name
 indexItem.searchCondition.label=Bedingung für Indizierung 
 indexItem.searchString.label=Suchausdruck
 indexItem.show.h1=Indexeintrag anzeigen
-indexItem.systemic.description=Das "systemisch"-Feld markiert Indexeinträge, die für systemrelevante Werte erfassen (wie z.B. den Namen oder Objekt-Typ).
+indexItem.systemic.description=Das ''systemisch''-Feld markiert Indexeinträge, die für systemrelevante Werte erfassen (wie z.B. den Namen oder Objekt-Typ).
 indexItem.systemic.label=system-relevant
 indexItem.vaProviderParams.label=Parameter für Vorschlagsliste
 indexType.create.label=Indexeintrag anlegen
@@ -829,3 +829,6 @@ objectType.config=Konfiguration
 app.cinnamon=Cinnamon
 
 userAccount.fullname.nullable.error=Bitte geben Sie den vollständigen Benutzernamen an.
+indexItem.storeField.label=Inhalt wird im Index gespeichert
+indexItem.storeField.description=Inhalt wird im Index gespeichert. Dies ist sinnvoll, wenn speziell angepasster Code die \
+  Daten aus dem Index nach einer Suche direkt verwendet, ohne das gefundene Objekt extra aus der Datenbank zu laden.
