Improve error message on user creation.
Fix #124

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -991,3 +991,4 @@ indexItem.storeField.label=Store field value in index
 indexItem.storeField.description=Store the field value in the index. \
   This is useful for specialised code which uses just the index data from a found object without \
   loading the whole document from the database.
+userAccount.name.validator.invalid=The chosen username is invalid. It must be neither empty nor consisting only of whitespace.
