--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -833,3 +833,4 @@ indexItem.storeField.label=Inhalt wird im Index gespeichert
 indexItem.storeField.description=Inhalt wird im Index gespeichert. Dies ist sinnvoll, wenn speziell angepasster Code die \
   Daten aus dem Index nach einer Suche direkt verwendet, ohne das gefundene Objekt extra aus der Datenbank zu laden.
 userAccount.name.validator.invalid=Dieser Benutzername ist ungültig. Er darf weder fehlen noch aus Leerzeichen bestehen.
+userAccount.pwd.nullable.error=Das Passwort darf nicht leer sein.
