--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -834,3 +834,4 @@ indexItem.storeField.description=Inhalt wird im Index gespeichert. Dies ist sinn
   Daten aus dem Index nach einer Suche direkt verwendet, ohne das gefundene Objekt extra aus der Datenbank zu laden.
 userAccount.name.validator.invalid=Dieser Benutzername ist ungültig. Er darf weder fehlen noch aus Leerzeichen bestehen.
 userAccount.pwd.nullable.error=Das Passwort darf nicht leer sein.
+error.password.too.short=Bitte verwenden Sie ein Passwort mit mindestens 8 Zeichen.
