Implement setContent properly in web UI.
 Fix #132 Bug: setContent in web-ui is broken

--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -835,3 +835,4 @@ indexItem.storeField.description=Inhalt wird im Index gespeichert. Dies ist sinn
 userAccount.name.validator.invalid=Dieser Benutzername ist ungültig. Er darf weder fehlen noch aus Leerzeichen bestehen.
 userAccount.pwd.nullable.error=Das Passwort darf nicht leer sein.
 error.password.too.short=Bitte verwenden Sie ein Passwort mit mindestens 8 Zeichen.
+upload.success=Die Datei wurde erfolgreich hochgeladen.
