--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -916,3 +916,4 @@ indexItem.storeField.description=Store the field value in the index. \
 userAccount.name.validator.invalid=The chosen username is invalid. It must be neither empty nor consisting only of whitespace.
 userAccount.pwd.nullable.error=The password must not be empty
 upload.success=File upload was successful.
+user.password.denied.logintype=Cannot change password on LDAP users
