Show loginType in user admin page. Prevent admin from trying to edit the password of LDAP users via Cinnamon.
Fix #182

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -917,3 +917,4 @@ userAccount.name.validator.invalid=The chosen username is invalid. It must be ne
 userAccount.pwd.nullable.error=The password must not be empty
 upload.success=File upload was successful.
 user.password.denied.logintype=Cannot change password on LDAP users
+user.login.type=LoginType
