--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -918,3 +918,6 @@ userAccount.pwd.nullable.error=The password must not be empty
 upload.success=File upload was successful.
 user.password.denied.logintype=Cannot change password on LDAP users
 user.login.type=LoginType
+user.delete.admin.forbidden=You must not delete superusers.
+user.transferAssets.admin.forbidden=You cannot transfer a superuser's assets.
+invalid.request=Your request object was missing or invalid.
